Bug 503829 - If I rotate the screen, the brightness becomes super bright for few milliseconds in HDR.
Summary: If I rotate the screen, the brightness becomes super bright for few milliseco...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.3.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-06 07:54 UTC by laichiaheng
Modified: 2025-10-17 20:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description laichiaheng 2025-05-06 07:54:18 UTC
SUMMARY
If I rotate my screen, my monitor becomes super bright for few milliseconds, and then turns back to normal.
It only happens in HDR mode.
I'm aware that it may hurt my back light of my monitor.

STEPS TO REPRODUCE
1. Rotate the screen via kscreen-doctor or System Settings.

OBSERVED RESULT
The screen turns super bright for a short moment, and then turns back to normal.

EXPECTED RESULT
Just like SDR mode, the brightness shouldn't change.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 6.3.4
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION
Comment 1 Vlad Zahorodnii 2025-05-12 07:20:45 UTC
The screentransform effect ignores color description stuff.
Comment 2 Bug Janitor Service 2025-10-14 15:07:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8250
Comment 3 Zamundaaa 2025-10-15 11:51:08 UTC
Git commit 1b967a881e8a010af4056c637ba65205575c87b9 by Xaver Hugl.
Committed on 15/10/2025 at 10:54.
Pushed by zamundaaa into branch 'master'.

plugins/screentransform: support color management

This simply makes sure that both previous and current textures of the screen
are rendered with the color description of the screen.

M  +6    -5    src/plugins/screentransform/screentransform.cpp

https://invent.kde.org/plasma/kwin/-/commit/1b967a881e8a010af4056c637ba65205575c87b9
Comment 4 Zamundaaa 2025-10-15 14:39:34 UTC
Git commit 2867f094893ff5797f10b406e173710cd8c93b44 by Xaver Hugl.
Committed on 15/10/2025 at 14:05.
Pushed by zamundaaa into branch 'Plasma/6.5'.

plugins/screentransform: support color management

This simply makes sure that both previous and current textures of the screen
are rendered with the color description of the screen.


(cherry picked from commit 1b967a881e8a010af4056c637ba65205575c87b9)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +6    -5    src/plugins/screentransform/screentransform.cpp

https://invent.kde.org/plasma/kwin/-/commit/2867f094893ff5797f10b406e173710cd8c93b44