plugins/screentransform: support color management

This simply makes sure that both previous and current textures of the screen
are rendered with the color description of the screen.

BUG: 503829


(cherry picked from commit 1b967a881e8a010af4056c637ba65205575c87b9)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>